syntax = "proto3";

package shortener;

option go_package = "./pb";

service URLShortener {
  rpc ShortenURL(ShortenURLRequest) returns (ShortenURLResponse);
  rpc ShortenJSON(ShortenJSONRequest) returns (ShortenJSONResponse);
  rpc ShortenBatch(ShortenBatchRequest) returns (ShortenBatchResponse);
  rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse);
  rpc DeleteUserURLs(DeleteUserURLsRequest) returns (DeleteUserURLsResponse);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
  rpc Ping(PingRequest) returns (PingResponse);
  rpc GetOriginalURL(GetOriginalURLRequest) returns (GetOriginalURLResponse);
}

message ShortenURLRequest {
  string url = 1;
  string user_id = 2;
}

message ShortenURLResponse {
  string short_url = 1;
  bool already_exists = 2;
}

message ShortenJSONRequest {
  string url = 1;
  string user_id = 2;
}

message ShortenJSONResponse {
  string result = 1;
  bool already_exists = 2;
}

message BatchItem {
  string correlation_id = 1;
  string original_url = 2;
}

message BatchResponseItem {
  string correlation_id = 1;
  string short_url = 2;
}

message ShortenBatchRequest {
  repeated BatchItem items = 1;
  string user_id = 2;
}

message ShortenBatchResponse {
  repeated BatchResponseItem items = 1;
}

message GetUserURLsRequest {
  string user_id = 1;
}

message UserURLInfo {
  string short_url = 1;
  string original_url = 2;
}

message GetUserURLsResponse {
  repeated UserURLInfo items = 1;
}

message DeleteUserURLsRequest {
  string user_id = 1;
  repeated string urls = 2;
}

message DeleteUserURLsResponse {
  bool success = 1;
}

message GetStatsRequest {
  string client_ip = 1;
}

message GetStatsResponse {
  int32 urls = 1;
  int32 users = 2;
}

message PingRequest {}

message PingResponse {
  bool available = 1;
}

message GetOriginalURLRequest {
  string short_id = 1;
}

message GetOriginalURLResponse {
  string original_url = 1;
  bool deleted = 2;
}
